Change the implementation of server list to CopyOnWriteList
The purpose of this change is to throw away some synchronized methods.

Plugin instance is accessed from a lot of threads. So synchronized
methods block many processes. It would become a critical issue
if implement remote API.

This change solves such situation by using CopyOnWriteList.
It will improve UI performance.