@@ -49,6 +49,7 @@ import java.io.File;
 import java.io.IOException;
 import java.util.LinkedList;
 import java.util.List;
+import java.util.concurrent.CopyOnWriteArrayList;
 
 import jenkins.model.Jenkins;
 
@@ -88,7 +89,7 @@ public class PluginImpl extends Plugin {
             AbstractProject.BUILD);
 
     private static final Logger logger = LoggerFactory.getLogger(PluginImpl.class);
-    private LinkedList<GerritServer> servers;
+    private final List<GerritServer> servers = new CopyOnWriteArrayList<GerritServer>();
     private transient GerritHandler gerritEventManager;
     private transient volatile boolean active = false;
 
@@ -129,12 +130,9 @@ public class PluginImpl extends Plugin {
     /**
      * Get the list of Gerrit servers.
      *
-     * @return the list as a LinkedList of GerritServers
+     * @return the list of GerritServers
      */
-    public synchronized List<GerritServer> getServers() {
-        if (servers == null) {
-            servers = new LinkedList<GerritServer>();
-        }
+    public List<GerritServer> getServers() {
         return servers;
     }
 
@@ -143,7 +141,7 @@ public class PluginImpl extends Plugin {
      *
      * @return the list of server names as a list.
      */
-    public synchronized List<String> getServerNames() {
+    public List<String> getServerNames() {
         LinkedList<String> names = new LinkedList<String>();
         for (GerritServer s : getServers()) {
             names.add(s.getName());
@@ -157,7 +155,7 @@ public class PluginImpl extends Plugin {
      * @param name the name of the server to get.
      * @return the GerritServer object to get, or null if no server has this name.
      */
-    public synchronized GerritServer getServer(String name) {
+    public GerritServer getServer(String name) {
         for (GerritServer s : servers) {
             if (s.getName().equals(name)) {
                 return s;
@@ -172,8 +170,8 @@ public class PluginImpl extends Plugin {
      * @return the server.
      */
     public GerritServer getFirstServer() {
-        if (servers != null && !servers.isEmpty()) {
-            return servers.getFirst();
+        if (!servers.isEmpty()) {
+            return servers.get(0);
         }
         return null;
     }
@@ -183,8 +181,11 @@ public class PluginImpl extends Plugin {
      *
      * @param servers the list to be set.
      */
-    public synchronized void setServers(LinkedList<GerritServer> servers) {
-        this.servers = servers;
+    public void setServers(List<GerritServer> servers) {
+        if (this.servers != servers) {
+            this.servers.clear();
+            this.servers.addAll(servers);
+        }
     }
 
     /**
@@ -193,7 +194,7 @@ public class PluginImpl extends Plugin {
      * @param s the server to be added.
      * @return the list after adding the server.
      */
-    public synchronized LinkedList<GerritServer> addServer(GerritServer s) {
+    public List<GerritServer> addServer(GerritServer s) {
         servers.add(s);
         return servers;
     }
@@ -204,7 +205,7 @@ public class PluginImpl extends Plugin {
      * @param s the server to be removed.
      * @return the list after removing the server.
      */
-    public synchronized LinkedList<GerritServer> removeServer(GerritServer s) {
+    public List<GerritServer> removeServer(GerritServer s) {
         servers.remove(s);
         return servers;
     }
@@ -296,14 +297,12 @@ public class PluginImpl extends Plugin {
             }
             pluginConfig = conf;
         }
-        if (servers == null || servers.isEmpty()) {
-            servers = new LinkedList<GerritServer>();
+        if (servers.isEmpty()) {
             if (config != null) { //have loaded data in old format, so add a new server with the old config to the list.
                 GerritServer defaultServer = new GerritServer(DEFAULT_SERVER_NAME);
                 defaultServer.setConfig(config);
                 servers.add(defaultServer);
             }
-            setServers(servers);
             save();
         }
         //For unit/integration testing only...
@@ -352,6 +351,7 @@ public class PluginImpl extends Plugin {
             gerritEventManager = null;
         }
         GerritSendCommandQueue.shutdown();
+        servers.clear();
     }
 
 }
